# hyprnote

./: Cargo.toml  README.md  pnpm-lock.yaml
.github/scripts/: slop-check.mjs
.github/workflows/: api_ci.yaml  bot_ci.yaml  cactus.yaml  ci.yaml  db_ci.yaml  desktop_cd.yaml  desktop_ci.yaml  eval_ci.yaml  fmt.yaml  llm_e2e.yaml  local_stt_e2e.yaml  stt_e2e.yaml  web_ci.yaml  zizmor.yaml
apps/api/: openapi.gen.json  package.json
apps/api/src/: env.rs  main.rs  openapi.rs
apps/cli/: Cargo.toml
apps/cli/src/: main.rs  runtime.rs
apps/cli/src/commands/: auth.rs  mod.rs  tui.rs
apps/desktop/: index.html  package.json
apps/desktop/flatpak/: com.hyprnote.Hyprnote.desktop  com.hyprnote.Hyprnote.metainfo.xml  com.hyprnote.Hyprnote.yml
apps/desktop/src/: billing.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.flatpak.json  tauri.conf.json  tauri.conf.nightly.json  tauri.conf.stable.json  tauri.conf.staging.json
apps/desktop/src-tauri/src/: agents-content.md  lib.rs
apps/desktop/src/components/: event-listeners.tsx
apps/desktop/src/config/: registry.ts
apps/desktop/src/contexts/: listener.tsx
apps/desktop/src/hooks/: useEnhancedNotes.ts
apps/desktop/src/styles/: globals.css
apps/pro/: package.json
apps/storybook/: package.json
apps/stripe/: package.json
apps/web/: content-collections.ts  netlify.toml  package.json
apps/web/content/articles/: hyprnote-is-now-char.mdx  mac-productivity-apps.mdx  markdown-note-taking-apps.mdx
apps/web/content/changelog/: 1.0.8-nightly.4.mdx  1.0.8-nightly.5.mdx
apps/web/public/: robots.txt
apps/web/src/: routeTree.gen.ts  styles.css
apps/web/src/components/: header.tsx  table-of-contents.tsx
crates/analytics/src/: lib.rs
crates/api-calendar/: Cargo.toml
crates/api-calendar/src/: error.rs  lib.rs  openapi.rs  provider.rs
crates/api-calendar/src/providers/: google.rs  outlook.rs
crates/api-calendar/src/routes/: calendar.rs  mod.rs
crates/api-messenger/: Cargo.toml
crates/api-messenger/src/: error.rs  lib.rs
crates/api-messenger/src/routes/: messenger.rs  mod.rs
crates/api-nango/: Cargo.toml
crates/api-nango/src/: config.rs  extractor.rs  integrations.rs  lib.rs  state.rs  supabase.rs
crates/api-nango/src/routes/: webhook.rs
crates/api-research/src/mcp/: server.rs
crates/api-storage/: Cargo.toml
crates/api-storage/src/: error.rs  openapi.rs
crates/api-storage/src/routes/: mod.rs  storage.rs
crates/api-subscription/: Cargo.toml
crates/api-subscription/src/: config.rs  lib.rs  stripe.rs  trial.rs
crates/api-subscription/src/routes/: billing.rs  mod.rs
crates/api-support/: Cargo.toml
crates/api-support/src/: config.rs  env.rs  error.rs  lib.rs  openapi.rs  state.rs
crates/api-support/src/mcp/: prompts.rs  server.rs
crates/api-support/src/routes/: chatwoot.rs  feedback.rs  mod.rs
crates/audio-mime/: Cargo.toml
crates/audio-mime/src/: lib.rs
crates/audio-utils/: Cargo.toml
crates/audio-utils/src/: lib.rs
crates/cactus/: Cargo.toml  LICENSE  README.md
crates/cactus/src/: model.rs
crates/cactus/src/llm/: complete.rs  result.rs  stream.rs
crates/cactus/src/stt/: batch.rs  mod.rs  result.rs  stream.rs  transcriber.rs  whisper.rs
crates/cactus/tests/: llm.rs  stt.rs
crates/chatwoot/: Cargo.toml  build.rs  fetch.sh  openapi.gen.json
crates/db-parser/src/v0/: mod.rs
crates/device-monitor/src/: linux.rs
crates/eval/: Cargo.toml
crates/google-calendar/src/: client.rs  types.rs
crates/google-drive/src/: client.rs  types.rs
crates/http/src/: lib.rs
crates/listener-core/: Cargo.toml
crates/listener-core/examples/: cli.rs
crates/listener-core/src/: runtime.rs
crates/listener-core/src/actors/: root.rs
crates/listener2-core/: Cargo.toml
crates/listener2-core/src/: batch.rs  events.rs
crates/llm-cactus/: Cargo.toml
crates/llm-cactus/src/: error.rs  lib.rs  manager.rs  service.rs
crates/llm-types/src/: parser.rs
crates/nango/src/: http.rs  lib.rs  proxy.rs
crates/notification-interface/src/: lib.rs
crates/notification/src/: lib.rs
crates/onnx/: Cargo.toml
crates/outlook-calendar/src/: types.rs
crates/owhisper-client/src/: lib.rs
crates/owhisper-interface/src/: stream.rs
crates/s3/: Cargo.toml
crates/slack-web/: Cargo.toml
crates/slack-web/src/: client.rs  error.rs  lib.rs  types.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  fs.rs  global.rs  lib.rs  obsidian.rs  runtime.rs
crates/storage/src/vault/: fs.rs  mod.rs  path.rs
crates/teems/: Cargo.toml
crates/teems/src/: client.rs  error.rs  lib.rs  types.rs
crates/transcribe-aws/: Cargo.toml
crates/transcribe-cactus/src/: error.rs
crates/transcribe-proxy/: Cargo.toml
crates/transcribe-proxy/src/: hyprnote_routing.rs
crates/transcribe-proxy/tests/: hyprnote_contract_e2e.rs
crates/transcribe-whisper-local/: Cargo.toml
crates/transcript/: Cargo.toml
crates/transcript/examples/replay/: fixture.rs  main.rs  renderer.rs
crates/transcript/src/: accumulator.rs  id.rs  input.rs  lib.rs  processor.rs  types.rs  view.rs  words.rs
crates/transcript/src/accumulator/: channel.rs  mod.rs  words.rs
crates/transcript/src/postprocess/: mod.rs
crates/transcript/src/promotion/: mod.rs
crates/vad-ext/: Cargo.toml
crates/vad-ext/src/: lib.rs
e2e/blackbox/tests/: app.spec.ts
extensions/shared/: API.md
plugins/hooks/src/: event.rs
plugins/importer/src/: types.rs
plugins/listener/: Cargo.toml
plugins/listener/src/: commands.rs  runtime.rs
plugins/listener/src/actors/listener/: adapters.rs
plugins/listener2/: Cargo.toml
plugins/listener2/js/: bindings.gen.ts
plugins/listener2/src/: batch.rs  events.rs
plugins/local-llm/src/: commands.rs
plugins/notification/js/: bindings.gen.ts
plugins/notification/src/: events.rs  handler.rs
plugins/notify/src/: path.rs
plugins/settings/: Cargo.toml
plugins/settings/src/: commands.rs  error.rs  ext.rs  lib.rs  state.rs
plugins/windows/js/: bindings.gen.ts
scripts/: info.sh  setup-linux-tauri.sh
supabase/migrations/: 20250214000000_create_nango_connections.sql
(+111 files in other folders)
