[package]
name = "api-messenger"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-http = { workspace = true }
hypr-slack-web = { workspace = true }
hypr-teems = { workspace = true }

axum = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
