[package]
name = "api-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-api-nango = { workspace = true }
hypr-google-drive = { workspace = true }
hypr-nango = { workspace = true }

utoipa = { workspace = true }

axum = { workspace = true }
sentry = { workspace = true }
tracing = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
