[package]
name = "audio-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = { workspace = true }
futures-util = { workspace = true }
hypr-audio-interface = { workspace = true }
hypr-audio-mime = { workspace = true }
pin-project = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

dasp = { workspace = true }
hound = { workspace = true }
rodio = { workspace = true, features = ["symphonia-all"] }
rubato = "0.16.2"
vorbis_rs = { workspace = true }

[dev-dependencies]
hypr-data = { workspace = true }
tokio = { workspace = true, features = ["full"] }
