[package]
name = "chatwoot"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
progenitor-client = "0.12"
reqwest = { workspace = true, features = ["json", "stream"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
openapiv3 = "2"
progenitor = "0.12"
prettyplease = "0.2"
serde_json = { workspace = true }
syn = "2"
