[package]
name = "eval"
version = "0.1.0"
edition = "2021"
description = "LLM evaluation runner for Char"

[dependencies]
backon = { workspace = true }
dirs = { workspace = true }
markdown = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
ureq = { version = "3", features = ["json"] }

hypr-template-eval = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
