[package]
name = "llm-cactus"
version = "0.1.0"
edition = "2024"

[dependencies]
hypr-cactus = { workspace = true }
hypr-llm-types = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

axum = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt"] }
uuid = { workspace = true, features = ["v4"] }
