[package]
name = "transcript"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
hypr-data = { workspace = true }
serde_json = { workspace = true }

[dependencies]
owhisper-interface = { workspace = true }

serde = { workspace = true }
specta = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
