[package]
name = "vad-ext"
version = "0.1.0"
edition = "2024"

[features]
default = []
chunking = ["dep:silero-rs"]

[dev-dependencies]
hound = { workspace = true }
hypr-data = { workspace = true }
rodio = { workspace = true }

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

hypr-audio-interface = { workspace = true }
hypr-audio-utils = { workspace = true }
hypr-vad = { workspace = true, features = ["earshot"] }
silero-rs = { workspace = true, optional = true }

futures-util = { workspace = true }
pin-project = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
