[package]
name = "tauri-plugin-listener"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-listener"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
insta = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rodio = { workspace = true, features = ["wav"] }
serde_json = { workspace = true }
specta-typescript = { workspace = true }
uuid = { workspace = true }

[dependencies]
hypr-audio = { workspace = true }
hypr-language = { workspace = true }
hypr-listener-core = { workspace = true, features = ["specta"] }
hypr-storage = { workspace = true }
hypr-transcript = { workspace = true }

owhisper-client = { workspace = true }
owhisper-interface = { workspace = true }

tauri-plugin-hooks = { workspace = true }
tauri-plugin-local-stt = { workspace = true }
tauri-plugin-settings = { workspace = true }
tauri-plugin-tray = { workspace = true }

tauri = { workspace = true, features = ["specta", "test"] }

specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

ractor = { workspace = true, features = ["async-trait"] }

dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
