[package]
name = "tauri-plugin-listener2"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-listener2"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
tauri-plugin-settings = { workspace = true }

hypr-audio-utils = { workspace = true }
hypr-host = { workspace = true }
hypr-language = { workspace = true }
hypr-transcript = { workspace = true }

owhisper-client = { workspace = true, features = ["argmax"] }
owhisper-interface = { workspace = true }

tauri = { workspace = true, features = ["specta", "test"] }

camino = { workspace = true }
specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
thiserror = { workspace = true }

ractor = { workspace = true, features = ["async-trait"] }

futures-util = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tokio-stream = { workspace = true }
tracing = { workspace = true }

aspasia = "0.2.1"
