[package]
name = "tauri-plugin-listener2"
version = "0.1.0"
authors = ["You"]
edition = "2024"
exclude = ["/js", "/node_modules"]
links = "tauri-plugin-listener2"
description = ""

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dev-dependencies]
specta-typescript = { workspace = true }

[dependencies]
hypr-language = { workspace = true }
hypr-listener2-core = { workspace = true, features = ["specta"] }
owhisper-interface = { workspace = true }

tauri-plugin-settings = { workspace = true }

tauri = { workspace = true, features = ["specta", "test"] }

specta = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

serde = { workspace = true }
tokio = { workspace = true }
